Fixed transition of menu on mobile

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -40,16 +40,18 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: unset;
+  max-height: 0;
   padding-top: 1.2em;
   padding-bottom: 1.2em;
   background: unset;
   z-index: 2;
+  transition: 0.2s;
   &[data-menu="true"] {
-    height: 100vh;
+    max-height: 100vh;
     background: $primary-color;
   }
   @include media-md {
+    max-height: unset;
     padding-top: 2em;
     padding-bottom: 3em;
     font-size: 1.2em;
@@ -89,7 +91,7 @@
 
 .header-container {
   position: relative;
-  height: 100%;
+  height: 100vh;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -97,6 +99,7 @@
   padding-left: 1.2rem;
   padding-right: 1.2rem;
   @include media-md {
+    height: 100%;
     flex-direction: row;
     align-items: flex-end;
     max-width: 850px;
